# MachineLearningOperations

./: .gitignore  README.md  codestructure.py  main.py  pyproject.toml
.github/: FUNDING.yml
config/: config.yaml
notebooks/: Model.ipynb
src/data/: data_ingestion.py
src/evaluation/: evaluate_model.py
src/features/: feature_engineering.py
src/models/: model_train.py
src/pipeline/: pipeline.py
